# mil-benchmarks

./: LICENSE  README.md  data-generator.ipynb  setup.cfg
mil_benchmarks/: __init__.py  absence.py  complex.py  presence.py  standard.py  utils.py
mil_benchmarks/csvs/absence/cifar10/: 01_test.csv  01_train.csv  12_test.csv  12_train.csv  23_test.csv  23_train.csv  34_test.csv  34_train.csv  45_test.csv  45_train.csv  56_test.csv  56_train.csv  67_test.csv  67_train.csv  78_test.csv  78_train.csv  89_test.csv  89_train.csv
mil_benchmarks/csvs/absence/fashion/: 01_test.csv  01_train.csv  12_test.csv  12_train.csv  23_test.csv  23_train.csv  34_test.csv  34_train.csv  45_test.csv  45_train.csv  56_test.csv  56_train.csv  67_test.csv  67_train.csv  78_test.csv  78_train.csv  89_test.csv  89_train.csv
mil_benchmarks/csvs/absence/mnist/: 01_test.csv  01_train.csv  12_test.csv  12_train.csv  23_test.csv  23_train.csv  34_test.csv  34_train.csv  45_test.csv  45_train.csv  56_test.csv  56_train.csv  67_test.csv  67_train.csv  78_test.csv  78_train.csv  89_test.csv  89_train.csv
mil_benchmarks/csvs/complex/fashion/: basic-outfit_test.csv  basic-outfit_train.csv  multi-outfit_test.csv  multi-outfit_train.csv
mil_benchmarks/csvs/presence/cifar10/: 01_test.csv  01_train.csv  12_test.csv  12_train.csv  23_test.csv  23_train.csv  34_test.csv  34_train.csv  45_test.csv  45_train.csv  56_test.csv  56_train.csv  67_test.csv  67_train.csv  78_test.csv  78_train.csv  89_test.csv  89_train.csv
mil_benchmarks/csvs/presence/fashion/: 01_test.csv  01_train.csv  12_test.csv  (+15 more)
(+250 files in other folders)
