[metadata]
name = mil-benchmarks
version = 0.0.1
author = Dan Grahn
description = Multiple instance learning benchmarks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dgrahn/mil-benchmarks
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = mil_benchmarks
python_requires = >= 3.6