[metadata]
name = mil-benchmarks
version = 0.0.1-3
author = Dan Grahn
author_email = dan.grahn@wright.edu
description = Multiple instance learning benchmarks
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dgrahn/mil-benchmarks
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages=find:
include_package_data = True
install_requires =
    numpy >= 1.19
    pandas >= 1.2
    tensorflow >= 2.4
python_requires = >=3.7